Aligning with google style specified via editor config